--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8"/>
 	<title>NewsFlow</title>
 
-	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'/>
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald"/>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css"/>
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
 
 	<link rel="stylesheet" href="css/normalize.css"/>
 	<link rel="stylesheet" href="css/app.css"/>
@@ -51,18 +52,18 @@
 		</section>
 
 		<footer>
-			{{view App.SliderView}}
+			<div class="slider">{{view App.SliderView valueBinding="myValue"}}</div>
 		</footer>
 	</section>
 	</script>
 
 	<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 	<script src="http://maps.stamen.com/js/tile.stamen.js?v1.2.3"></script>
+	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
-	<script src="js/jquery.js"></script>
 	<script src="js/handlebars.js"></script>
 	<script src="js/ember.js"></script>
-
 	<script src="js/app.js"></script>
 </body>
 </html>
